--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scal=1.0">
         <title>daniel chinagorom | WDD 130</title>
+        <link rel="stylesheet" href="styles/mystyle.css">
+        <meta name="description" content="describe your home page heree using keywords like your name, the course, the purpose of the page.">
+        <meta name="author" content="your name"
         <head>
             <body>
             </body>
@@ -18,6 +21,11 @@
                 <img src="images/profilepicture.jpg" alt="hello, my name is daniel chinagorom" width="200">
                 <p>hello! my name is daniel chinagorom am from nigeria i enjoy reading and watching movies. i like hanging out with friends on weekends.</p>
             </main>
+            <aside>
+                <h1>nigeria</h1>
+                <img src="images/nigeriaphoto.jpg" alt="nigeria landscape">
+                <p>nigeria is a country in africa. it is located in west africa.</p>
+            </aside>
             <footer>
             </footer>
         </html>
