--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scal=1.0">
         <title>daniel chinagorom | WDD 130</title>
-        <link rel="stylesheet" href="styles/mystyle.css">
-        <meta name="description" content="describe your home page heree using keywords like your name, the course, the purpose of the page.">
-        <meta name="author" content="your name"
+        <link rel="stylesheet" href="styles/styles.css">
+        <meta name="description" content="daniel chinagorom BYU-Idaho WWD 130 course home page">
+        <meta name="author" content="daniel chinagorom"
+       
         <head>
+
             <body>
-            </body>
             <header>
                 <nav>
-                    <a hrf="#">home</a>
-                    <a hrf="wwr/">rafting website</a>
+                    <a href="#">home</a>
+                    <a href="wwr/">white water rafting website</a>
+                    <a href="wwr/site-plan-rafting.html">white water rafting siteplan</a>
                 </nav>
             </header>
             <main>
                 <h1>daniel chinagorom | WDD 130</h1>
                 <img src="images/profilepicture.jpg" alt="hello, my name is daniel chinagorom" width="200">
-                <p>hello! my name is daniel chinagorom am from nigeria i enjoy reading and watching movies. i like hanging out with friends on weekends.</p>
+                <p>hello! my name is daniel chinagorom am from nigeria.
+                     Am a BYU-idaho student, am studying to get degree in software devolopment.
+                     i enjoy reading and watching movies,
+                      i like singing with friends on weekends, with that i was popular and when known in my area</p>
             </main>
             <aside>
-                <h1>nigeria</h1>
-                <img src="images/nigeriaphoto.jpg" alt="nigeria landscape">
-                <p>nigeria is a country in africa. it is located in west africa.</p>
+                <h2>Nigeria</h2>
+                <img src="images/nigeriaphoto.jpg" alt="Nigeria landscape">
+                <p>Nigeria is a country in africa. it is located in west africa.</p>
             </aside>
             <footer>
+                <p>2025 | daniel chinagorm | Nigeria, west Africa</p>
             </footer>
+        </body>
+        
         </html>
    
