--- a/wireframe.html
+++ b/wireframe.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scal=1.0">
-        <title>wireframe practice</title>
+        <title>daniel chinagorom | WDD 130</title>
         <head>
             <body>
         <header>
