--- a/wireframe.html
+++ b/wireframe.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scal=1.0">
-        <title>daniel chinagorom | WDD 130</title>
+        <title>wireframe practice</title>
         <head>
             <body>
         <header>
@@ -12,7 +12,7 @@
                 <img src="images/fishpond.jpeg" alt="logo">
             </div>
             <nav>
-                <a href="wireframe.html">home</a>
+                <a href="#">home</a>
                 <a href="#">link 1</a>
                 <a href="#">link 2</a>
                 <a href="#">link 3</a>
