--- a/wireframe.html
+++ b/wireframe.html
@@ -12,7 +12,7 @@
                 <img src="images/fishpond.jpeg" alt="logo">
             </div>
             <nav>
-                <a href="#">home</a>
+                <a href="wireframe.html">home</a>
                 <a href="#">link 1</a>
                 <a href="#">link 2</a>
                 <a href="#">link 3</a>
