--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scal=1.0">
-        <title>daniel chinagorom | WDD 130</title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <title>daniel chinagorom | WDD  <link rel="stylesheet" href="styles/style130</title>
+       s.css">
         <meta name="description" content="daniel chinagorom BYU-Idaho WWD 130 course home page">
         <meta name="author" content="daniel chinagorom"
        
+        
         <head>
 
             <body>
