--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,59 +9,63 @@
         <meta name="description" content="white water rafting website">
         <meta name="author" content="daniel chinagorom"
 
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css2?family=Liter&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    </head>
+    <body>
         <header>
-            <main>
-                <div>
-                     <img src="images/z-downriver.png" alt="">
-                     <hi>Down the river water rafting</hi>
-                     <nav>
-                    <ul class="navigation">
-                        <li><a href="">Service</a>water rafting,safty boot,life jacket |</li>
-                        <li><a href="#">Products</a>water rafting,hotel accomodation and good transportation system |</li>
-                        <li><a href="#">History</a>Down the river water rafting is an ancient water fall discovered in 1942 in calabar,Nigeria.
-                            Ever since then it has been a vactional site for families. people come from different 
-                        part of the world every christmax to have a wter rafting adventure. In down the river water rafting we have good hotels for resting,
-                    good transportation service and ventilated environment |</li>
-                        <li><a href="#">Contact</a>08060834448</li>
-                    </ul>
+            <div class="logo">
+                <img src="images/z-downriver.png" alt="">
+                <nav>
+                <a href="index.html">home</a>
+                <a href="about.html">about</a>
+                <a href="trips.html">trip</a>
+                <a href="contact.html">contact</a>
                 </nav>
-                    <articl>
-                        <img src="images/rafting people.jpg" alt="">
-                        <p>this is a recreational center where you come with your family
-                            to have a test of water rafting
-                        </p>
-                            <div class="hero">
-                                <img src="images/rafting16.jpg" alt="hero">
-                                <hi>down the river water rafting</hi>
-                                <div class="hero">
-                                    <img src="images/rafting14.jpg" alt="hero">
-                                    <hi>down the river water rafting</hi>
-                                    <div class="hero">
-                                        <img src="images/rafting12.jpg" alt="hero">
-                                        <hi>down the river water rafting</hi>
-                            <p>our purpose is to bring happiness to families,encourage individual and family wellness,elimating stress and high blood presure.</p>
-                            <h2>adventure to the fullness</h2>
-                            <footer> 
-                                <nav> class="sociallinks">
-                                  <a href="https://facebook.com">
-                                    <img src="images/facebook logo.png" alt="facebook">
-                                   </a>
-                                <nav> class="sociallinks">
-                                   <a href="https://twitter.com">
-                                    <img scr="images/twitter logo.png" alt="sociallinks">
-                                   </a>
-                                <nav> class="sociallinks">
-                                   <a href="https://instagram.com">
-                                    <img scr="images/instagram logo.png" alt="instagram">
-                                   </a>
-                                </nav>
-                            </footer>
-                </main>
+            </div>
+        </header>
+        <main>
+            <div class="hero">
+                <img src="images/rafting14.jpg" alt="whitewater splash">
+            </div>
+            <h1>white water rafting</h1>
 
-                
+            <article>
+                <img src="images/rafting64.jpg" alt="">
+                <p>our purpose is to bring happiness to families,encourage individual and family wellness,elimating stress and high blood presure
+                    
+                </p>
+                </article>
+                <section>
+                    <h2>history</h2>
+                    <p>good transportation service and ventilated environmenDown the river water rafting is an ancient water fall discovered in 1942 in calabar,Nigeria.
+                        Ever since then it has been a vactional site for families. people come from different 
+                    part of the world every christmax to have a wter rafting adventure. In down the river water rafting we have good hotels for resting,t</p>
+                </section>
+                <section>
+                    <h2>adventure awaits you </h2>
+                    <img src="images/rafting4.jpg" alt="hero">
+                    <img src="images/rafting65.jpg" alt="hero">
+                    <img src="images/rafting26.jpg" alt="hero">
+                    <img src="images/rafting12.jpg" alt="hero">
+                    <img src="images/rafting41.jpg" alt="hero">
+                </section>
+        </main>
+        <footer>
+            <p>©2025 white water rafting</p>
+            <nav class="sociallinks">
+                <a href="https://facebook.com">
+                  <img src="images/facebook logo.webp" alt="facebook">
+                 </a>
+                 <a href="https://twitter.com">
+                  <img src="images/twitter logo.webp" alt="twitter">
+                 </a>
+                 <a href="https://instagram.com">
+                  <img src="images/instagram logo.jpg" alt="instagram">
+                 </a>
+              </nav>
+        </footer>
                 <body>
         <html>
