--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scal=1.0">
+        <meta name="description" content="white water rafting website">
+        <meta name="author" content="daniel chinagorom">
         <title>daniel chinagorom | WDD 130</title>
         <link rel="stylesheet" href="styles/rafting.css">
-        <meta name="description" content="white water rafting website">
-        <meta name="author" content="daniel chinagorom"
-
+       
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,17 +40,35 @@
                 </article>
                 <section>
                     <h2>history</h2>
-                    <p>good transportation service and ventilated environmenDown the river water rafting is an ancient water fall discovered in 1942 in calabar,Nigeria.
+                    <p>Down the river water rafting is an ancient water fall discovered in 1942 in calabar,Nigeria.
                         Ever since then it has been a vactional site for families. people come from different 
-                    part of the world every christmax to have a wter rafting adventure. In down the river water rafting we have good hotels for resting,t</p>
+                    part of the world every christmax to have a water rafting adventure. In down the river water rafting 
+                    we have good hotels for resting,good transportation service and ventilated environmen</p>
                 </section>
                 <section>
-                    <h2>adventure awaits you </h2>
-                    <img src="images/rafting4.jpg" alt="hero">
-                    <img src="images/rafting65.jpg" alt="hero">
-                    <img src="images/rafting26.jpg" alt="hero">
-                    <img src="images/rafting12.jpg" alt="hero">
-                    <img src="images/rafting41.jpg" alt="hero">
+                         <h2>adventure awaits you </h2>
+                         <div class="figure_flex">
+                            <figure>
+                                <img src="images/rafting4.jpg" alt="hero">
+                                <figcaption>rafting4</figcaption>
+                           </figure>
+                           <figure>
+                                <img src="images/rafting65.jpg" alt="hero">
+                                <figcaption>rafting65</figcaption>
+                           </figure>
+                           <figure>
+                                <img src="images/rafting26.jpg" alt="hero">
+                                <figcaption>rafting26</figcaption>
+                            </figure>
+                            <figure>
+                                <img src="images/rafting12.jpg" alt="hero">
+                                <figcaption>rafting12</figcaption>
+                            </figure>
+                            <figure>
+                                <img src="images/rafting41.jpg" alt="hero">
+                                <figcaption>rafting41</figcaption>
+                            </figure>
+                        </div>
                 </section>
         </main>
         <footer>
