--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,14 +17,16 @@
     <body>
         <header>
             <div class="hero">
-                <img src="images/z-downriver.png" alt="">
+                <img src="images/z-downriver.png" alt="sample logo">
+                </div>
                 <nav>
-                <a href="home.html">Home</a>
-                <a href="about us.html">About us</a>
-                <a href="trips.html">Trip</a>
-                <a href="contact us.html">Contact us</a>
-                </nav>
-            </div>
+                <ul class="navigation">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Trip</a></li>
+                    <li><a href="#">Contact us</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <div class="hero">
